--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,30 @@
 page-login {
 
 }
+
+.input-group{
+	display: flex;
+	align-items: center;
+	ion-icon{
+	    width: 30px;
+    	text-align: center;	
+	}
+	ion-input{
+		width: calc(100% - 35px);
+	}
+}
+
+.seperator{
+	text-align: center;
+    margin: 10px 0;
+    font-size: 1rem;
+    position: relative;
+    &:before{
+    	position: absolute;
+    	top: 50%;
+    	left: 0;
+    	border-top: #eee solid 1px;
+    	content: " ";
+    	width: 100%;
+    }
+}
