--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,13 +24,18 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
+  //primary:    #387ef5,
+  primary:    #1FAB89,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
-);
+  dark:       #222,
 
+  mBarter-green:(
+    base: #1FAB89,
+    contrast: #ffffff
+  ),
+);
 
 // App iOS Variables
 // --------------------------------------------------
