--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,3 +18,7 @@
 .toolbar-background {
   background : color($colors, mBarter-green, base);
 }
+
+.toolbar-title{
+  color : color($colors, mBarter-green, contrast);
+}
