changed font family to match prototype

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -21,4 +21,9 @@
 
 .toolbar-title{
   color : color($colors, mBarter-green, contrast);
+  font-family: $font-family-base;
+}
+
+.toolbar-title-ios{
+  font-weight: 300;
 }
