--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,3 +18,12 @@
 .toolbar-background {
   background : color($colors, mBarter-green, base);
 }
+.vertical-container, .vertical-align{
+  width: 100%;
+}
+.vertical-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
