--- a/src/pages/home/wallet-slide/wallet-slide.component.html
+++ b/src/pages/home/wallet-slide/wallet-slide.component.html
@@ -1,3 +1,10 @@
+<div class="wallet-slide-dots">
+    <ul class="wallet-slide-dots-list">
+        <li class="active"></li>
+        <li></li>
+        <li></li>
+    </ul>
+</div>
 <wallet-header></wallet-header>
-<h4 class="transactions">Transactions</h4>
+<h4 class="transactions-header">Transactions</h4>
 <transaction-log></transaction-log>
