--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -79,5 +79,5 @@ $colors: (
 
 //@import "roboto";
 //@import "noto-sans";
-@import url('https://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700');
 $font-family-base: "Lato";
