--- a/src/pages/home/wallet-header/wallet-header.component.scss
+++ b/src/pages/home/wallet-header/wallet-header.component.scss
@@ -1,7 +1,4 @@
-wallet-slide{
-  height: 100%;
-  display: block;
-}
+
 .currency-header{
   background-color: color($colors, primary);
   padding: 4rem 0 2rem;
@@ -15,6 +12,8 @@ wallet-slide{
     margin-top: 0;
     margin-bottom: 0;
     font-size: 6rem;
+    font-family: Lato;
+    font-weight: 300;
   }
 }
 .action-group{
