--- a/src/pages/home/wallet-header/wallet-header.component.html
+++ b/src/pages/home/wallet-header/wallet-header.component.html
@@ -1,6 +1,6 @@
 <div class="currency-header">
-  <p class="name">Canadian</p>
-  <h3 class="balance">34.34</h3>
+  <p class="name">{{ currencyName }}</p>
+  <h3 class="balance">{{ wallet.balance }}</h3>
 </div>
 <div class="action-group">
   <div class="action">
