--- a/src/pages/home/wallet-header/wallet-header.component.scss
+++ b/src/pages/home/wallet-header/wallet-header.component.scss
@@ -20,6 +20,7 @@
   display: flex;
   background-color: #ffffff;
   > .action{
+    cursor: pointer;
     padding-top: 1.3rem;
     padding-bottom: 1.3rem;
     width: 100%;
