--- a/src/pages/home/wallet-slide/wallet-slide.component.html
+++ b/src/pages/home/wallet-slide/wallet-slide.component.html
@@ -1,11 +1,11 @@
 
 <div class="slide-wrapper" (swipe)="changeWallet($event)">
-    <div class="wallet-slide-dots">
+    <div class="wallet-slide-dots" *ngIf="wallets.length > 1">
         <ul class="wallet-slide-dots-list">
-            <li *ngFor="let wallet of wallets" [ngClass]="{'active': $index == activeWallet}"></li>
+            <li *ngFor="let wallet of wallets" [ngClass]="{'active': wallet.id == activeWallet.id}"></li>
         </ul>
     </div>
-    <wallet-header></wallet-header>
+    <wallet-header [wallet]="activeWallet"></wallet-header>
     <h4 class="transactions-header">Transactions</h4>
     <transaction-log></transaction-log>
 </div>
