Resolved conflicts that were caused by the merge

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,6 +32,7 @@ $colors: (
   danger:     #f53d3d,
   light:      #F7F7F7,
   dark:       #222,
+  base:       #327eff,
   in:         green,
   out:        red,
   accept:     green,
