Change add money to deposit

--- a/src/pages/home/wallet-header/wallet-header.component.html
+++ b/src/pages/home/wallet-header/wallet-header.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="action-group">
   <div class="action" (tap)="redirect('deposit')">
-    <ion-icon name="add"></ion-icon> Add Money
+    <ion-icon name="add"></ion-icon> Deposit
   </div>
   <div class="action" (tap)="redirect('withdraw')">
     <ion-icon name="remove"></ion-icon> Withdraw
