--- a/src/pages/manage/withdraw/withdraw.component.html
+++ b/src/pages/manage/withdraw/withdraw.component.html
@@ -1,24 +1,22 @@
-<form [formGroup]="form" (ngSubmit)="send()" novalidate>
+<form [formGroup]="form" (ngSubmit)="submitWithDrawMoney()" novalidate>
 <ion-card>
     <ion-card-content>
 
       <ion-item>
         <ion-label stacked>Amount</ion-label>
-        <ion-input
+        <ion-input formControlName="amount"
           type="number"
           placeholder="0.00"
           step="0.01"
-          required
           name="amount"
-          [(ngModel)]="withdrawMoney.amount"
         ></ion-input>
       </ion-item>
 
       <ion-item>
         <ion-label stacked>Select Currency</ion-label>
-        <ion-select [(ngModel)]="withdrawMoney.wallet" name="wallet">
+        <ion-select formControlName="wallet" name="wallet">
           <ion-option *ngFor="let wallet of wallets" [value]="wallet">
-            {{ wallet.balance }} - {{ wallet.currency_code }}
+            {{ wallet.currency_code }}   -   Balance: {{ wallet.balance }}
           </ion-option>
         </ion-select>
       </ion-item>
@@ -29,15 +27,13 @@
   <ion-card>
     <ion-card-content>
       <ion-label stacked>Paypal Email Address</ion-label>
-      <ion-input
+      <ion-input formControlName="email"
         type="email"
         placeholder="example@example.com"
-        required
         name="email"
-        [(ngModel)]="withdrawMoney.email"
       ></ion-input>
     </ion-card-content>
   </ion-card>
 
-  <button ion-button block type="submit" [disabled]="withdrawForm.invalid">Withdraw with Paypal</button>
+  <button ion-button block type="submit" [disabled]="!form.valid">Withdraw with Paypal</button>
 </form>
