--- a/src/pages/manage/deposit/deposit.component.html
+++ b/src/pages/manage/deposit/deposit.component.html
@@ -1,45 +1,37 @@
-<ion-card>
+<form [formGroup]="form" (ngSubmit)="deposit()" novalidate>
+  <ion-card>
+    <ion-card-content>
+      <!-- Add card content here! -->
+      <ion-item>
+        <ion-label stacked>Amount</ion-label>
+        <ion-input formControlName="amount"
+                   type="number"
+                   placeholder="{{ addMoney.decimalPlaces }}"
+                   step="0.01"
+                   min="0"
+        ></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label stacked>Select Currency</ion-label>
+        <ion-select formControlName="currency" (ionChange)="setDecimalPlaces()">
+          <ion-option *ngFor="let currency of currencies; let i = index" [value]="currency">
+            {{ currency.code }} - {{ currency.name }}
+          </ion-option>
+        </ion-select>
+      </ion-item>
 
-  <ion-card-content>
-    <!-- Add card content here! -->
-    <ion-item>
-      <ion-label stacked>Amount</ion-label>
-      <ion-input [(ngModel)]="addMoney.amount"
-                 type="number"
-                 placeholder="{{ addMoney.decimalPlaces }}"
-                 step="0.01"
-                 min="0"
-      ></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label stacked>Select Currency</ion-label>
-      <ion-select [(ngModel)]="addMoney.currency" (ionChange)="setDecimalPlaces()">
-        <ion-option *ngFor="let currency of currencies; let i = index" [value]="currency">
-          {{ currency.code }} - {{ currency.name }}
-        </ion-option>
-      </ion-select>
-    </ion-item>
+    </ion-card-content>
 
-  </ion-card-content>
+  </ion-card>
 
-</ion-card>
-
-<ion-card>
-  <ion-card-header>
-    <ion-label text-center stacked>Add money with</ion-label>
-  </ion-card-header>
-  <ion-card-content>
-    <!-- PayPal Logo -->
-    <table border="0" cellpadding="10" cellspacing="0" align="center">
-      <tr>
-        <td align="center"></td>
-      </tr>
-      <tr>
-        <td align="center"><a href="https://www.paypal.com/webapps/mpp/paypal-popup" title="How PayPal Works"
-                              onclick="javascript:window.open('https://www.paypal.com/webapps/mpp/paypal-popup','WIPaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1060, height=700'); return false;"><img
-          src="https://www.paypalobjects.com/webstatic/mktg/logo/AM_mc_vs_dc_ae.jpg" border="0"
-          alt="PayPal Acceptance Mark"></a></td>
-      </tr>
-    </table><!-- PayPal Logo -->
-  </ion-card-content>
-</ion-card>
+  <ion-card>
+    <ion-card-header>
+      <ion-label text-center stacked>Add money with</ion-label>
+    </ion-card-header>
+    <ion-card-content>
+      <div text-center>
+        <button ion-button type="submit" block [disabled]="!form.valid">PayPal</button>
+      </div>
+    </ion-card-content>
+  </ion-card>
+</form>
