--- a/src/pages/manage/withdraw/withdraw.component.html
+++ b/src/pages/manage/withdraw/withdraw.component.html
@@ -5,16 +5,19 @@
       <ion-item>
         <ion-label stacked>Amount</ion-label>
         <ion-input formControlName="amount"
+          (input)="updateValidAmount()"
           type="number"
           placeholder="0.00"
           step="0.01"
           name="amount"
+          [max]="maxAmount"
         ></ion-input>
       </ion-item>
+      <div *ngIf="!validAmount">You only have {{maxAmount}} {{maxCurrency}}!</div>
 
       <ion-item>
         <ion-label stacked>Select Currency</ion-label>
-        <ion-select formControlName="wallet" name="wallet">
+        <ion-select formControlName="wallet" name="wallet" (ionChange)="updateValidAmount()">
           <ion-option *ngFor="let wallet of wallets" [value]="wallet">
             {{ wallet.currency_code }}   -   Balance: {{ wallet.balance }}
           </ion-option>
@@ -35,5 +38,5 @@
     </ion-card-content>
   </ion-card>
 
-  <button ion-button block type="submit" [disabled]="!form.valid">Withdraw with Paypal</button>
+  <button ion-button block type="submit" [disabled]="!form.valid || !validAmount">Withdraw with Paypal</button>
 </form>
