--- a/src/pages/manage/deposit/deposit.component.html
+++ b/src/pages/manage/deposit/deposit.component.html
@@ -1,12 +1,11 @@
 <form [formGroup]="form" (ngSubmit)="deposit()" novalidate>
   <ion-card>
     <ion-card-content>
-      <!-- Add card content here! -->
       <ion-item>
         <ion-label stacked>Amount</ion-label>
         <ion-input formControlName="amount"
                    type="number"
-                   placeholder="{{ addMoney.decimalPlaces }}"
+                   placeholder="0.0"
                    step="0.01"
                    min="0"
         ></ion-input>
@@ -14,7 +13,7 @@
       <ion-item>
         <ion-label stacked>Select Currency</ion-label>
         <ion-select formControlName="currency" (ionChange)="setDecimalPlaces()">
-          <ion-option *ngFor="let currency of currencies; let i = index" [value]="currency">
+          <ion-option *ngFor="let currency of currencies" [value]="currency">
             {{ currency.code }} - {{ currency.name }}
           </ion-option>
         </ion-select>
@@ -26,7 +25,7 @@
 
   <ion-card>
     <ion-card-header>
-      <ion-label text-center stacked>Add money with</ion-label>
+      <ion-label text-center stacked>Deposit money with</ion-label>
     </ion-card-header>
     <ion-card-content>
       <div text-center>
