--- a/src/pages/manage/deposit/deposit.component.html
+++ b/src/pages/manage/deposit/deposit.component.html
@@ -13,9 +13,14 @@
       <ion-item>
         <ion-label stacked>Select Currency</ion-label>
         <ion-select formControlName="currency" (ionChange)="setDecimalPlaces()">
-          <ion-option *ngFor="let currency of currencies" [value]="currency">
-            {{ currency.code }} - {{ currency.name }}
-          </ion-option>
+          <ng-container *ngFor="let currency of currencies">
+            <ion-option *ngIf="isSameCurrency(default_currency, currency)" [value]="default_currency" selected="true">
+              {{default_currency.code}} - {{default_currency.name}}
+            </ion-option>
+            <ion-option *ngIf="!isSameCurrency(default_currency, currency)" [value]="currency">
+              {{ currency.code }} - {{ currency.name }}
+            </ion-option>
+          </ng-container>
         </ion-select>
       </ion-item>
 
