--- a/src/pages/manage/withdraw/withdraw.component.html
+++ b/src/pages/manage/withdraw/withdraw.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="withdraw()" novalidate>
+<form [formGroup]="form" (ngSubmit)="withdraw()" novalidate >
 <ion-card>
     <ion-card-content>
 
@@ -13,7 +13,7 @@
           [max]="maxAmount"
         ></ion-input>
       </ion-item>
-      <div *ngIf="!validAmount">You only have {{maxAmount}} {{maxCurrency}}!</div>
+      <p color="danger" *ngIf="!validAmount">You only have {{maxAmount}} {{maxCurrency}}!</p>
 
       <ion-item>
         <ion-label stacked>Select Currency</ion-label>
