Add functionality to send money button on homepage

--- a/src/pages/home/wallet-header/wallet-header.component.html
+++ b/src/pages/home/wallet-header/wallet-header.component.html
@@ -9,7 +9,7 @@
   <div class="action" (tap)="redirect('withdraw')">
     <ion-icon name="remove"></ion-icon> Withdraw
   </div>
-  <div class="action">
+  <div class="action" (tap)="redirect('send')">
     <ion-icon name="send"></ion-icon>  Send Money
   </div>
 </div>
