--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -82,5 +82,7 @@ $colors: (
 // Fonts
 // --------------------------------------------------
 
-@import "roboto";
-@import "noto-sans";
+//@import "roboto";
+//@import "noto-sans";
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700');
+$font-family-base: "Lato";
