Log of past transaction for one wallet

--- a/src/components/transaction/transaction.component.html
+++ b/src/components/transaction/transaction.component.html
@@ -1,8 +1,8 @@
 <div class="transaction">
   <div class="details">
-    Transactions Number
+    {{transaction.title}}
   </div>
   <div class="amount">
-    12.13
+    {{transaction.amount}}
   </div>
 </div>
