EP-54 Log of past transactions when swiping wallet

--- a/src/pages/home/wallet-slide/wallet-slide.component.html
+++ b/src/pages/home/wallet-slide/wallet-slide.component.html
@@ -7,5 +7,5 @@
     </div>
     <wallet-header [wallet]="activeWallet"></wallet-header>
     <h4 class="transactions-header">Transactions</h4>
-    <transaction-log></transaction-log>
+    <transaction-log [wallet]="activeWallet"></transaction-log>
 </div>
