--- a/src/components/transaction-log/transaction-log.component.html
+++ b/src/components/transaction-log/transaction-log.component.html
@@ -1,9 +1,9 @@
 <div class="transaction-list">
 
-  <ng-container *ngIf="getWallet().length>0">
+  <!--<ng-container *ngIf="getWallet().length>0">-->
     <ng-container *ngFor="let transaction of transactions">
       <transaction [transaction]="transaction"></transaction>
     </ng-container>
-  </ng-container>
+  <!--</ng-container>-->
 
 </div>
