EP-54 Scroll feature and red and green transfers

--- a/src/components/transaction/transaction.component.html
+++ b/src/components/transaction/transaction.component.html
@@ -2,7 +2,7 @@
   <div class="details">
     {{transaction.title}}
   </div>
-  <div class="amount">
+  <div [ngClass]=" {'negative': transaction.amount < 0 , 'positive': transaction.amount>=0}" class="amount">
     {{transaction.amount}}
   </div>
 </div>
