--- a/src/pages/home/wallet-header/wallet-header.component.scss
+++ b/src/pages/home/wallet-header/wallet-header.component.scss
@@ -1,4 +1,7 @@
-
+wallet-header{
+  position: relative;
+  display: block;
+}
 .currency-header{
   background-color: color($colors, primary);
   padding: 4rem 0 2rem;
