--- a/src/pages/home/wallet-slide/wallet-slide.component.scss
+++ b/src/pages/home/wallet-slide/wallet-slide.component.scss
@@ -8,7 +8,13 @@ wallet-slide{
   font-size: 1.4rem;
   margin: 1.2rem 0;
 }
+.transaction-scroll{
+  position: relative;
+  overflow-y: scroll;
+  height: calc(100% - 203px);
+}
 .wallet-slide-dots{
+  z-index: 1;
   position: absolute;
   top: 2.4rem;
   right: 0;
@@ -30,4 +36,8 @@ wallet-slide{
       }
     }
   }
+}
+.slide-wrapper{
+  position: relative;
+  height: 100%;
 }
