EP-54 Log Past transactions (#72)
* Log of past transaction for one wallet

* EP-54 Log of past transactions when swiping wallet

* Remove test code and add tsdoc

* Remove commented code

* EP-54 Scroll feature and red and green transfers

* Added in and out for transaction amounts

--- a/src/components/transaction-log/transaction-log.component.html
+++ b/src/components/transaction-log/transaction-log.component.html
@@ -1,4 +1,6 @@
+
 <div class="transaction-list">
-  <transaction></transaction>
-  <transaction></transaction>
+  <ng-container *ngFor="let transaction of transactions">
+    <transaction [transaction]="transaction"></transaction>
+  </ng-container>
 </div>
