--- a/src/components/transaction/transaction.component.scss
+++ b/src/components/transaction/transaction.component.scss
@@ -14,6 +14,15 @@ transaction {
   }
   > .amount{
     text-align: center;
-    width: 50px;
+    width: 100px;
+    text-align: right;
+    &.negative{
+      color: red;
+    }
+
+    &.positive{
+      color: green;
+    }
   }
 }
+
