--- a/src/pages/home/wallet-slide/wallet-slide.component.html
+++ b/src/pages/home/wallet-slide/wallet-slide.component.html
@@ -6,6 +6,8 @@
         </ul>
     </div>
     <wallet-header [wallet]="activeWallet"></wallet-header>
-    <h4 class="transactions-header">Transactions</h4>
-    <transaction-log></transaction-log>
+    <div class="transaction-scroll">
+      <h4 class="transactions-header">Transactions</h4>
+      <transaction-log [wallet]="activeWallet"></transaction-log>
+    </div>
 </div>
