--- a/src/components/transaction/transaction.component.html
+++ b/src/components/transaction/transaction.component.html
@@ -1,8 +1,8 @@
 <div class="transaction">
   <div class="details">
-    Transactions Number
+    {{transaction.title}}
   </div>
-  <div class="amount">
-    12.13
+  <div [ngClass]=" {'negative': transaction.amount < 0 , 'positive': transaction.amount>=0}" class="amount">
+    {{ (transaction.amount>0) ? '+' : '' }}{{transaction.amount}} {{transaction.amount>0 ? 'IN' : 'OUT'}}
   </div>
 </div>
