Added transfer modal to front page and changed empty wallet message to be less offensive.

--- a/src/components/transaction-log/transaction-log.component.html
+++ b/src/components/transaction-log/transaction-log.component.html
@@ -1,6 +1,6 @@
 
 <div class="transaction-list">
   <ng-container *ngFor="let transaction of transactions">
-    <transaction [transaction]="transaction"></transaction>
+    <transaction [transaction]="transaction" (click)="showTransferModal(transaction)"></transaction>
   </ng-container>
 </div>
