--- a/src/pages/manage/manage.scss
+++ b/src/pages/manage/manage.scss
@@ -1,3 +1,18 @@
 page-manage {
 
 }
+
+.paypal-button {
+  background-color: #FEC43A;
+  color: #222;
+  height: 3em;
+  .button-inner {
+    justify-content: space-around;
+    > img {
+      width: 120px;
+    }
+  }
+  &.button-ios.activated{
+    background-color: #FEC43A;
+  }
+}
