--- a/src/pages/transfers/transfers.scss
+++ b/src/pages/transfers/transfers.scss
@@ -1,3 +1,22 @@
-page-transfers {
 
+.transfer {
+  align-items: center;
+  display: flex;
+  padding: 10px;
+  > .details {
+    width: calc(100% - 50px);
+    > div:first-child {
+      font-size: 0.8em;
+      margin-bottom: 5px;
+    }
+  }
+
+  > .amount {
+    text-align: right;
+    width: 100px;
+  }
+
+  & + .transfer {
+    border-top: color($colors, light) 1px solid;
+  }
 }
