--- a/src/pages/manage/deposit/deposit.component.html
+++ b/src/pages/manage/deposit/deposit.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form" (ngSubmit)="deposit()" novalidate>
   <ion-card>
-    <ion-card-content>
+    <ion-card-content class="separated">
       <ion-item>
         <ion-label stacked>Amount</ion-label>
         <ion-input formControlName="amount"
@@ -28,14 +28,9 @@
 
   </ion-card>
 
-  <ion-card>
-    <ion-card-header>
-      <ion-label text-center stacked>Deposit money with</ion-label>
-    </ion-card-header>
-    <ion-card-content>
-      <div text-center>
-        <button ion-button type="submit" block [disabled]="!form.valid">PayPal</button>
-      </div>
-    </ion-card-content>
-  </ion-card>
+  <div class="button-padding">
+    <button class="paypal-button" ion-button type="submit" block [disabled]="!form.valid">
+      <div>Checkout with </div> <img src="assets/images/paypal-logo.svg" alt="">
+    </button>
+  </div>
 </form>
