--- a/src/pages/manage/withdraw/withdraw.component.html
+++ b/src/pages/manage/withdraw/withdraw.component.html
@@ -1,16 +1,15 @@
-<form [formGroup]="form" (ngSubmit)="withdraw()" novalidate >
-<ion-card>
-    <ion-card-content>
-
+<form [formGroup]="form" (ngSubmit)="withdraw()" novalidate>
+  <ion-card>
+    <ion-card-content class="separated">
       <ion-item>
         <ion-label stacked>Amount</ion-label>
         <ion-input formControlName="amount"
-          (input)="updateValidAmount()"
-          type="number"
-          placeholder="0.00"
-          step="0.01"
-          name="amount"
-          [max]="maxAmount"
+                   (input)="updateValidAmount()"
+                   type="number"
+                   placeholder="0.00"
+                   step="0.01"
+                   name="amount"
+                   [max]="maxAmount"
         ></ion-input>
       </ion-item>
       <p color="danger" *ngIf="!validAmount">You only have {{maxAmount}} {{maxCurrency}}!</p>
@@ -19,24 +18,30 @@
         <ion-label stacked>Select Currency</ion-label>
         <ion-select formControlName="wallet" name="wallet" (ionChange)="updateValidAmount()">
           <ion-option *ngFor="let wallet of wallets" [value]="wallet">
-            {{ wallet.currency_code }}   -   Balance: {{ wallet.balance }}
+            {{ wallet.currency_code }} - Balance: {{ wallet.balance }}
           </ion-option>
         </ion-select>
       </ion-item>
-
     </ion-card-content>
   </ion-card>
 
   <ion-card>
     <ion-card-content>
-      <ion-label stacked>Paypal Email Address</ion-label>
-      <ion-input formControlName="email"
-        type="email"
-        placeholder="example@example.com"
-        name="email"
-      ></ion-input>
+      <ion-item>
+        <ion-label stacked>Paypal Email Address</ion-label>
+        <ion-input formControlName="email"
+                   type="email"
+                   placeholder="example@example.com"
+                   name="email"
+        ></ion-input>
+      </ion-item>
     </ion-card-content>
   </ion-card>
 
-  <button ion-button block type="submit" [disabled]="!form.valid || !validAmount">Withdraw with Paypal</button>
+  <div class="button-padding">
+    <button class="paypal-button" ion-button block type="submit" [disabled]="!form.valid || !validAmount">
+      <div>Payout with</div>
+      <img src="assets/images/paypal-logo.svg" alt="">
+    </button>
+  </div>
 </form>
