Adapted colors and header title based on In or Out transfers

--- a/src/pages/modals/transfers-modal/transfers-modal.scss
+++ b/src/pages/modals/transfers-modal/transfers-modal.scss
@@ -1,3 +1,11 @@
 page-transfers-modal {
+  .amount {
+    &.negative {
+      color: color($colors, out);
+    }
 
+    &.positive {
+      color: color($colors, in);
+    }
+  }
 }
