Removed front-end plus sign for incoming transactions on the dashboard.

--- a/src/components/transaction/transaction.component.html
+++ b/src/components/transaction/transaction.component.html
@@ -4,6 +4,6 @@
     <div>{{ transaction.title }}</div>
   </div>
   <div [ngClass]=" {'negative': transaction.amount < 0 , 'positive': transaction.amount>=0}" class="amount">
-    {{ (transaction.amount>0) ? '+' : '' }}{{transaction.amount }} {{transaction.amount>0 ? 'IN' : 'OUT'}}
+    {{transaction.amount }} {{transaction.amount>0 ? 'IN' : 'OUT'}}
   </div>
 </div>
